--- a/todo
+++ b/todo
@@ -1,2 +1,9 @@
-fonction free: libère la mémoire ET ajoute les blocks free à g_main_struct->free_block (dans l'ordre croissant)
-fonctione realloc: alloue un nouveau block memoire et free l'ancien
+todo:
+	fonction free: libère la mémoire ET ajoute les blocks free à g_main_struct->free_block (dans l'ordre croissant)
+	fonction realloc: alloue un nouveau block memoire et free l'ancien
+	fusion de blocks libre contigu SI pas de free_block assez grand
+
+bonus:
+	garbage collector
+	affichage de l'état de la mémoire
+	protéger contre le multi thread
